--- a/robot/.vscode/settings.json
+++ b/robot/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
     "editor.useTabStops": true,
     "editor.tabSize": 4,
-    "editor.detectIndentation": false
+    "editor.detectIndentation": false,
+    "editor.insertSpaces": false
 }
